# keeper-i

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  addrs.json  build.rs  debug.sh  dev.sh  docker-compose.yml  goerli.json  keeper.sh  mainnet.json  private_key.example  start.sh  state.json  test.sh
.github/workflows/: build-deploy-cloudrun.yaml  build-deploy-goerli.yaml  build-deploy-goerli.yml  build-deploy-mainnet.yaml  build-deploy-mainnet.yml
abis/: Codex.json  CollateralAuction.json  Collybus.json  IVault.json  Limes.json  NoLossCollateralAuction.json  VaultEPT.json
aggregator/: Dockerfile  app.tsx  package.json  server.js  server.tsx
dashboard/: Dockerfile  package.json  server.js
dashboard/src/: app.css  app.tsx
keeper/: Cargo.toml  Dockerfile  README.md  dev.sh  goerli.json  keeper.sh  start.sh
keeper/abis/: Codex.json  Collybus.json  IMulticall2.json  NoLossCollateralAuction.json
keeper/src/: keeper.rs  lib.rs  liquidator.rs  watcher.rs
keeper/src/bindings/: mod.rs
src/: keeper.rs  lib.rs  liquidator.rs  positions.rs  watcher.rs
src/bindings/: .gitignore  collybus.rs  ivault.rs  mod.rs  nolosscollateralauction.rs
